# megaton

./: .gitignore  .gitmodules  Cargo.toml  Lisensor.toml  Megaton.toml  README.md  Taskfile.yml  build.rb
.github/workflows/: book.yml  check.yml
OLD/buildcommon/: Cargo.toml
OLD/buildcommon/src/: flags.rs  lib.rs  print.rs
OLD/buildcommon/src/system/: executor.rs
OLD/buildtool/: Cargo.toml
OLD/buildtool/src/: cmd_install.rs  main.rs
OLD/buildtool/src/cmd_build/: build_project.rs  config.rs
OLD/buildtool/src/cmd_init/: mod.rs
OLD/docs/: Taskfile.yml  book.toml
OLD/docs/src/: incremental_build.md
OLD/docs/src/capi/: defines.md  index.md  module.md  patching.md
OLD/docs/src/config/: build_flags.md  module.md  profiles.md
buildcommon/: Cargo.toml
buildcommon/src/: compdb.rs  env.rs  flags.rs  lib.rs  print.rs  source.rs  system.rs  unused.rs
buildcommon/src/system/: error.rs  fs.rs  mod.rs  path.rs  process.rs
buildtool/: Cargo.toml
buildtool/src/: cli.rs  cmd_checkenv.rs  cmd_clean.rs  cmd_install.rs  error.rs  main.rs
buildtool/src/cmd_build/: build_project.rs  builder.rs  checker.rs  config.rs  mod.rs  run_impl.rs
buildtool/src/cmd_init/template/: .clangd  Megaton.toml
buildtool/src/cmd_init/template/src/: main.cpp
docs/src/: SUMMARY.md  build_flags.md  config_spec.md  create_project.md  install.md  mega_env_draft.md  profiles.md
docs/src/capi/: defines.md  hooking.md  module.md
docs/src/config/: check.md
docs/theme/: index.hbs
lib/: .clangd  Taskfile.yml  link.ld  switch.ld
lib/bootstrap/: megart.c
lib/include/exl/armv8/inst/: op100x.hpp  opx101.hpp
lib/include/exl/armv8/inst/op100x/: pc_rel_addr.hpp
lib/include/exl/armv8/inst/op100x/add_sub_imm/: cmp_imm.hpp  sub_imm.hpp  subs_imm.hpp
lib/include/exl/armv8/inst/op101x/b_reg/: br.hpp  (+1 more)
lib/include/exl/armv8/inst/opx1x0/: load_store_register_offset.hpp  load_store_register_unsigned_immediate.hpp
lib/include/exl/armv8/util/: sign_extend.hpp
lib/include/exl/hook/: inline.hpp  lib.hpp  macros.h  replace.hpp  trampoline.hpp
lib/include/exl/hook/nx64/: impl.hpp  inline_impl.hpp
lib/include/exl/hook/util/: func_ptrs.hpp  jit.hpp  modules.hpp  setting.hpp
lib/include/exl/patch/: code_patcher.hpp  patcher_impl.hpp  random_access_patcher.hpp  stream_patcher.hpp
lib/include/exl/util/: typed_storage.hpp
lib/include/exl/util/sys/: mem_layout.hpp  rw_pages.hpp
lib/include/exl_hook/: prelude.h
lib/include/exl_patch/: prelude.h
lib/include/megaton/: align.h  hook.h  module.h  module_layout.h  panic_abort.h  prelude.h
lib/include/megaton/__priv/: aligned_storage.h  jit.h  mirror.h  rtld.h
lib/runtime/: link.ld  megart.c
lib/src/: crt0.s
lib/src/exl/: README.md
lib/src/exl/hook/nx64/: hook_impl.cpp  inline_impl.cpp
lib/src/exl/reloc/: elf.cpp  elf.hpp  rtld.hpp
lib/src/exl/reloc/rtld/: ModuleHeader.hpp  ModuleList.hpp  ModuleObject.cpp  ModuleObject.hpp  ld.cpp  utils.hpp
lib/src/exl/util/sys/: cur_proc_handle.cpp  cur_proc_handle.hpp  mem_layout.cpp  rw_pages.cpp
lib/src/exlaunch/: README.md
lib/src/exlaunch/source/exl/: lib.hpp
lib/src/exlaunch/source/exl/armv8/: register.hpp
lib/src/exlaunch/source/exl/hook/: base.hpp  inline.hpp  replace.hpp  setting.hpp  trampoline.hpp
lib/src/exlaunch/source/exl/lib/: armv8.hpp
lib/src/exlaunch/source/exl/patch/: code_patcher.hpp  patcher_impl.hpp  random_access_patcher.hpp  stream_patcher.hpp
lib/src/exlaunch/source/exl/reloc/: elf.cpp
lib/src/exlaunch/source/exl/util/: func_ptrs.hpp  ptr_path.hpp
lib/src/megaton/: init.cpp  module_layout.cpp  panic_abort.cpp  patcher.cpp
lib/src/megaton/__priv/: exl_inline_hook_impl.s  hook.cpp  inline_hook.cpp  mirror.cpp  proc_handle.cpp
lib/src/nx/: README.md
lib/src/nx/arm/: cache.s
lib/src/nx/kernel/: random.cpp  svc.s  virtmem.c
lib/src/sys/: init.cpp  panic_abort.cpp
librs/macros/: Cargo.toml
librs/macros/src/: bootstrap.rs  lib.rs
librs/runtime/: Cargo.toml
librs/runtime/src/: lib.rs
megaton-hammer/: Cargo.toml
megaton-hammer/src/system/: check.rs  error.rs  mod.rs  print.rs  process.rs
patches/: rust_std.patch
(+48 files in other folders)
