[workspace]
resolver = "2"
members = [
    "packages/cli",
    "packages/cli-build",
    "packages/docker-build",
    "packages/lib",
    "packages/lib/macros",
    "packages/toolchain-build",
    "packages/test-mod",
]


[workspace.dependencies.cu]
package = "pistonite-cu"
version = "0.8.3"
# path = "../../../cu/packages/copper"

[workspace.dependencies.pm]
package = "pistonite-pm"
version = "0.2.6"

[workspace.dependencies]
static_assertions = "1.1.0"
hermit-abi = "0.5.2"
ignore = "0.4.26"
flate2 = "1.1.9"
tar = "0.4.46"
sha2 = "0.11.0"
