[package]
name = "buildcommon"
version = "0.0.0"
edition = "2021"

[dependencies]
error-stack = "0.5.0"
thiserror = "1.0.66"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
serde_yaml_ng = "0.10.0"
derive_more = { version = "1.0.0", features = ["full"] }
which = "7.0.0"
dunce = "1.0.5"
filetime = "0.2.25"
pathdiff = "0.2.2"
