[package]
name = "megaton-buildtool"
version = "0.0.0"
edition = "2021"

[dependencies.buildcommon]
path = "../buildcommon"

[dependencies]
clap = { version = "4.5.21", features = ["derive", "cargo"] }
derive_more = "1.0.0"
dunce = "1.0.5"
error-stack = "0.5.0"
filetime = "0.2.25"
pathdiff = "0.2.2"
regex = "1.11.1"
rustc-hash = "2.0.0"
self-replace = "1.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml_ng = "0.10.0"
thiserror = "1.0.66"
toml = "0.8.19"
walkdir = "2.5.0"
which = "7.0.0"
